More movies, update README

--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -109,6 +109,26 @@
     <h2>The Fellowship of the Ring</h2>
 </div>
 
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="A7CBKT0PWFA" data-toggle="modal" data-target="#trailer">
+    <img src="https://ia.media-imdb.com/images/M/MV5BMWU4N2FjNzYtNTVkNC00NzQ0LTg0MjAtYTJlMjFhNGUxZDFmXkEyXkFqcGdeQXVyNjc1NTYyMjg@._V1_UX182_CR0,0,182,268_AL_.jpg" width="220" height="342">
+    <h2>12 Angry Men</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="k_13fFIrhPk" data-toggle="modal" data-target="#trailer">
+    <img src="https://i.pinimg.com/originals/07/38/b8/0738b8c6ca33ff27812fb9dfa8d8cce7.jpg" width="220" height="342">
+    <h2>V for Vendetta</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="MA65V-oLKa8" data-toggle="modal" data-target="#trailer">
+    <img src="https://1.bp.blogspot.com/-n9BvJyMC3cw/T6dgT7oTs5I/AAAAAAAADe0/-JlhCGv_3lg/s1600/goldfinger-tribute-poster.jpg" width="220" height="342">
+    <h2>Goldfinger</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="Z4rBDUJTnNU" data-toggle="modal" data-target="#trailer">
+    <img src="https://www.movieposter.com/posters/archive/main/38/MPW-19416" width="220" height="342">
+    <h2>1984</h2>
+</div>
+
     </div>
   </body>
 </html>
