--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -106,7 +106,7 @@
       
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="V75dMMIW2B4" data-toggle="modal" data-target="#trailer">
     <img src="https://images-na.ssl-images-amazon.com/images/I/51MDpDiZKOL._SY300_.jpg" width="220" height="342">
-    <h2>The Fellowship of the Ring</h2>
+    <h2>Fellowship of the Ring</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="A7CBKT0PWFA" data-toggle="modal" data-target="#trailer">
